--- a/style.css
+++ b/style.css
@@ -255,7 +255,10 @@ header {
   border: 1px solid var(--color-border);
   box-shadow: var(--shadow-soft);
 }
-
+.problem-solution h2 {
+  margin-top: 0;
+  margin-bottom: 0.4rem;
+}
 
 
 
