--- a/style.css
+++ b/style.css
@@ -259,6 +259,11 @@ header {
   margin-top: 0;
   margin-bottom: 0.4rem;
 }
+.problem-solution p {
+  color: var(--color-text-muted);
+  font-size: 0.97rem;
+}
+
 
 
 
